# Libraries

./: SharpIR.c  SharpIR.h
FastTransfer/: CMakeLists.txt  FT.c  FT.h  FT.t.cpp
FastTransfer/Buffer/: Buffer.c  Buffer.t.cpp  CMakeLists.txt
FastTransfer/Convert/: CMakeLists.txt  Convert.t.cpp
